--- a/SFMLprojv3/SFMLprojv3.vcxproj
+++ b/SFMLprojv3/SFMLprojv3.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="Blocks.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="World.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="stdafx.h" />
@@ -166,6 +167,7 @@
     <ClCompile Include="Blocks.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="World.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="SFMLprojv3.cpp" />
